feat: add unit tests for sent/received invoice retrieval and export functionality